--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -3,5 +3,14 @@
   hosts: nextcloud
   become: yes
   gather_facts: yes
+
   roles:
     - nextcloud
+
+  handlers:
+    - name: Restart Apache
+      service:
+        name: apache2
+        state: restarted
+
+
