--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ terraform/terraform.tfstate
 terraform/terraform.tfvars
 terraform/.terraform/providers/registry.terraform.io/yandex-cloud/yandex/0.80.0/darwin_arm64/README.md
 terraform/.terraform/providers/registry.terraform.io/yi-jiayu/telegram/0.3.1/darwin_arm64/README.md
+.DS_Store
